2011-03-30  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: add test for script formatter worker.
        https://bugs.webkit.org/show_bug.cgi?id=57447

        * inspector/debugger/script-formatter-expected.txt: Added.
        * inspector/debugger/script-formatter.html: Added.
        * platform/chromium/test_expectations.txt:

2011-04-06  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Eric Seidel.

        REGRESSION (r46914, r48764): When typing in Mail, line wrapping frequently occurs in the middle of words
        https://bugs.webkit.org/show_bug.cgi?id=57872

        Added a test insert a paragraph separator and text around tab spans. WebKit should not apply the tab span's
        style to the paragraph separator or the text.

        * editing/inserting/insert-paragraph-separator-tab-span-expected.txt: Added.
        * editing/inserting/insert-paragraph-separator-tab-span.html: Added.

2011-04-05  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Range insertNode function does not update content in the inspector
        https://bugs.webkit.org/show_bug.cgi?id=57829

        * inspector/elements/modify-chardata-expected.txt:
        * inspector/elements/modify-chardata.html:

2011-04-06  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        getComputedTextLength always returns 0 with tspan elements
        https://bugs.webkit.org/show_bug.cgi?id=19814

        Add a testcase showing that getComputedTextLength for <tspan> works fine.

        * svg/text/tspan-getComputedTextLength-expected.txt: Added.
        * svg/text/tspan-getComputedTextLength.svg: Added.

2011-04-05  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: [Extensions API] remove inspectedPage.* events
        https://bugs.webkit.org/show_bug.cgi?id=57763
