@@ -10,12 +10,12 @@ if (window.layoutTestController)
 
 edit1 = document.getElementById("edit1");
 edit1.focus();
-document.execCommand("BackColor", false, "#blue");
+document.execCommand("BackColor", false, "#00F");
 document.execCommand("InsertText", false, "Blue");
 
 edit2 = document.getElementById("edit2");
 edit2.focus();
-document.execCommand("ForeColor", false, "#blue");
+document.execCommand("ForeColor", false, "#00F");
 document.execCommand("InsertText", false, "Black");
 
 if (window.layoutTestController)
