@@ -1,0 +1,26 @@
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<html>
+<head>
+<link rel="stylesheet" href="../js/resources/js-test-style.css">
+<script src="../js/resources/js-test-pre.js"></script>
+</head>
+<body style="color: black">
+<p id="description"></p>
+<div id="console"></div>
+
+<div id="valid1" style="color: red">This style is "color: red"</div>
+<div id="valid2" style="color: FF0000">This style is "color: FF0000"</div>
+<div id="valid3" style="color: #FF0000">This style is "color: #FF0000"</div>
+<div id="valid4" style="color: F00">This style is "color: F00"</div>
+<div id="valid5" style="color: #F00">This style is "color: #F00"</div>
+<div id="invalid1" style="color: #red">This style is "color: #red"</div>
+<div id="invalid2" style="color: #yellow">This style is "color: #yellow"</div>
+<div id="invalid3" style="color: #green">This style is "color: #green"</div>
+<div id="invalid4" style="color: #FFAALL">This style is "color: #FFAALL"</div>
+<div id="invalid5" style="color: #FF000000">This style is "color: #FF000000"</div>
+
+<script src="script-tests/invalid-predefined-color.js"></script>
+<script src="../js/resources/js-test-post.js"></script>
+
+</body>
+</html>
